--- a/speaker.html
+++ b/speaker.html
@@ -203,7 +203,7 @@ rel="stylesheet"
                 <h5 class="mb-3">fog</h5>
                 <p class="mb-0">PROGRAMMER</p>
               </div>
-              <div class="col-md-6 col-lg-3 mb-4">
+              <!-- <div class="col-md-6 col-lg-3 mb-4">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
                   src="avatar/agent.jpeg"
@@ -212,7 +212,7 @@ rel="stylesheet"
                 />
                 <h5 class="mb-3">Agent 1</h5>
                 <p class="mb-0">Translator</p>
-              </div>
+              </div> -->
               <div class="col-md-6 col-lg-3 mb-4">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
